# roas_6000a

./: .gitignore  Makefile  README.md
6000a_ws/: frames.gv  rviz.rviz
6000a_ws/src/detection/: CMakeLists.txt  package.xml
6000a_ws/src/detection/scripts/: ball_detection.py  image_detection.py
6000a_ws/src/image_detection/: CMakeLists.txt  package.xml
6000a_ws/src/image_detection/scripts/: detection.py
6000a_ws/src/keyboard_control/: CMakeLists.txt  package.xml
6000a_ws/src/keyboard_control/launch/: ball_following.launch  keyboard_control.launch  slam.launch
6000a_ws/src/keyboard_control/src/: ball_following_node.cpp  identify_area_node.cpp  keyboard_control_node.cpp
6000a_ws/src/rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch
6000a_ws/src/rf2o_laser_odometry/src/: CLaserOdometry2DNode.cpp
docker/: dockerfile_nvidia_ros  dockerfile_roas_6000a  dockerfile_tb3_base  dockerfile_tb3_overlay  entrypoint.sh
